# display-on-epaper

./: .gitignore  Cargo.toml  config.toml
assets/texts/: quotes.csv
src/: calendar.rs  config.rs  display_tasks.rs  epd.rs  font_setting.rs  main.rs  quotes.rs  todos.rs  utils.rs
