[package]
name = "display-tasks-on-epaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
embedded-graphics = "0.7.1"
embedded-hal = "0.2.7"
epd-waveshare = "0.5.0"
image = "0.24.5"
imageproc = "0.23.0"
linux-embedded-hal = "0.3.2"
rusttype = "0.9.3"
serde = {version="1.0.154", features=["derive"]}
tinybmp = "0.4.0"
toml = "0.7.2"

